# prometheus

./: .gitignore  BUILD.bazel  WORKSPACE
cmd/prometheus/: BUILD.bazel
cmd/promtool/: BUILD.bazel
config/: BUILD.bazel
discovery/: BUILD.bazel
discovery/azure/: BUILD.bazel
discovery/consul/: BUILD.bazel
discovery/digitalocean/: BUILD.bazel
discovery/dns/: BUILD.bazel
discovery/eureka/: BUILD.bazel
discovery/file/: BUILD.bazel
discovery/hetzner/: BUILD.bazel
discovery/http/: BUILD.bazel
discovery/install/: BUILD.bazel
discovery/kubernetes/: BUILD.bazel
discovery/linode/: BUILD.bazel
discovery/marathon/: BUILD.bazel
discovery/moby/: BUILD.bazel
discovery/openstack/: BUILD.bazel
discovery/refresh/: BUILD.bazel
discovery/scaleway/: BUILD.bazel
discovery/targetgroup/: BUILD.bazel
discovery/triton/: BUILD.bazel
discovery/xds/: BUILD.bazel
discovery/zookeeper/: BUILD.bazel
documentation/examples/custom-sd/adapter/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/graphite/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/influxdb/: BUILD.bazel
documentation/examples/remote_storage/remote_storage_adapter/opentsdb/: BUILD.bazel
notifier/: BUILD.bazel
pkg/exemplar/: BUILD.bazel
pkg/gate/: BUILD.bazel
pkg/labels/: BUILD.bazel
pkg/logging/: BUILD.bazel
pkg/modtimevfs/: BUILD.bazel
pkg/pool/: BUILD.bazel
pkg/relabel/: BUILD.bazel
pkg/rulefmt/: BUILD.bazel
pkg/runtime/: BUILD.bazel
pkg/textparse/: BUILD.bazel
pkg/timestamp/: BUILD.bazel
pkg/value/: BUILD.bazel
prompb/: BUILD.bazel  remote.proto  types.proto
promql/: BUILD.bazel
promql/parser/: BUILD.bazel
rules/: BUILD.bazel
scrape/: BUILD.bazel
storage/: BUILD.bazel
storage/remote/: BUILD.bazel
template/: BUILD.bazel
tsdb/: BUILD.bazel
tsdb/chunkenc/: BUILD.bazel
tsdb/chunks/: BUILD.bazel
tsdb/fileutil/: BUILD.bazel
tsdb/goversion/: BUILD.bazel
tsdb/index/: BUILD.bazel
tsdb/record/: BUILD.bazel
tsdb/test/: BUILD.bazel
tsdb/tombstones/: BUILD.bazel
tsdb/tsdbutil/: BUILD.bazel
tsdb/wal/: BUILD.bazel
util/httputil/: BUILD.bazel
util/stats/: BUILD.bazel
util/strutil/: BUILD.bazel
util/teststorage/: BUILD.bazel
util/testutil/: BUILD.bazel
web/: BUILD.bazel
web/api/v1/: BUILD.bazel
