load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/prometheus/prometheus
# gazelle:go_naming_convention import_alias
# gazelle:go_naming_convention_external import_alias
# gazelle:resolve proto github.com/gogo/protobuf/gogoproto/gogo.proto @gogo_special_proto//github.com/gogo/protobuf/gogoproto
# gazelle:resolve proto go github.com/gogo/protobuf/gogoproto/gogo.proto @com_github_gogo_protobuf//gogoproto:go_default_library
# gazelle:go_grpc_compilers @io_bazel_rules_go//proto:gogo_proto
gazelle(name = "gazelle")
