load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "web",
    srcs = [
        "federate.go",
        "web.go",
    ],
    importpath = "github.com/prometheus/prometheus/web",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//notifier",
        "//pkg/labels",
        "//pkg/timestamp",
        "//pkg/value",
        "//promql",
        "//promql/parser",
        "//rules",
        "//scrape",
        "//storage",
        "//template",
        "//tsdb",
        "//tsdb/index",
        "//util/httputil",
        "//web/api/v1:api",
        "//web/ui",
        "@com_github_alecthomas_units//:units",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_gogo_protobuf//proto",
        "@com_github_mwitkow_go_conntrack//:go-conntrack",
        "@com_github_opentracing_contrib_go_stdlib//nethttp",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_prometheus_client_model//go",
        "@com_github_prometheus_common//expfmt",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//route",
        "@com_github_prometheus_common//server",
        "@com_github_prometheus_exporter_toolkit//web",
        "@org_golang_x_net//netutil",
        "@org_uber_go_atomic//:atomic",
    ],
)

go_test(
    name = "web_test",
    srcs = [
        "federate_test.go",
        "web_test.go",
    ],
    embed = [":web"],
    deps = [
        "//config",
        "//notifier",
        "//pkg/labels",
        "//promql",
        "//rules",
        "//scrape",
        "//storage",
        "//tsdb",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
    ],
)

alias(
    name = "go_default_library",
    actual = ":web",
    visibility = ["//visibility:public"],
)
