load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "exemplar",
    srcs = ["exemplar.go"],
    importpath = "github.com/prometheus/prometheus/pkg/exemplar",
    visibility = ["//visibility:public"],
    deps = ["//pkg/labels"],
)

alias(
    name = "go_default_library",
    actual = ":exemplar",
    visibility = ["//visibility:public"],
)
