load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rulefmt",
    srcs = ["rulefmt.go"],
    importpath = "github.com/prometheus/prometheus/pkg/rulefmt",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/timestamp",
        "//promql/parser",
        "//template",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_common//model",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "rulefmt_test",
    srcs = ["rulefmt_test.go"],
    data = glob(["testdata/**"]),
    embed = [":rulefmt"],
    deps = ["@com_github_stretchr_testify//require"],
)

alias(
    name = "go_default_library",
    actual = ":rulefmt",
    visibility = ["//visibility:public"],
)
