load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "remote",
    srcs = [
        "chunked.go",
        "client.go",
        "codec.go",
        "ewma.go",
        "intern.go",
        "max_timestamp.go",
        "metadata_watcher.go",
        "queue_manager.go",
        "read.go",
        "read_handler.go",
        "sigv4.go",
        "storage.go",
        "write.go",
        "write_handler.go",
    ],
    importpath = "github.com/prometheus/prometheus/storage/remote",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//pkg/exemplar",
        "//pkg/gate",
        "//pkg/labels",
        "//pkg/logging",
        "//pkg/relabel",
        "//pkg/textparse",
        "//prompb",
        "//scrape",
        "//storage",
        "//tsdb/chunkenc",
        "//tsdb/record",
        "//tsdb/wal",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/credentials",
        "@com_github_aws_aws_sdk_go//aws/credentials/stscreds",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//aws/signer/v4:signer",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_gogo_protobuf//proto",
        "@com_github_golang_snappy//:snappy",
        "@com_github_opentracing_contrib_go_stdlib//nethttp",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_opentracing_opentracing_go//ext",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_prometheus_common//version",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_uber_go_atomic//:atomic",
    ],
)

go_test(
    name = "remote_test",
    srcs = [
        "chunked_test.go",
        "client_test.go",
        "codec_test.go",
        "intern_test.go",
        "metadata_watcher_test.go",
        "queue_manager_test.go",
        "read_handler_test.go",
        "read_test.go",
        "sigv4_test.go",
        "storage_test.go",
        "write_handler_test.go",
        "write_test.go",
    ],
    embed = [":remote"],
    deps = [
        "//config",
        "//pkg/exemplar",
        "//pkg/labels",
        "//pkg/relabel",
        "//pkg/textparse",
        "//pkg/timestamp",
        "//prompb",
        "//promql",
        "//scrape",
        "//storage",
        "//tsdb/record",
        "@com_github_aws_aws_sdk_go//aws",
        "@com_github_aws_aws_sdk_go//aws/credentials",
        "@com_github_aws_aws_sdk_go//aws/session",
        "@com_github_aws_aws_sdk_go//aws/signer/v4:signer",
        "@com_github_go_kit_log//:log",
        "@com_github_gogo_protobuf//proto",
        "@com_github_golang_snappy//:snappy",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_prometheus_client_golang//prometheus/testutil",
        "@com_github_prometheus_common//config",
        "@com_github_prometheus_common//model",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_atomic//:atomic",
    ],
)

alias(
    name = "go_default_library",
    actual = ":remote",
    visibility = ["//visibility:public"],
)
