load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "chunks",
    srcs = [
        "chunks.go",
        "head_chunks.go",
        "head_chunks_other.go",
        "head_chunks_windows.go",
    ],
    importpath = "github.com/prometheus/prometheus/tsdb/chunks",
    visibility = ["//visibility:public"],
    deps = [
        "//tsdb/chunkenc",
        "//tsdb/errors",
        "//tsdb/fileutil",
        "@com_github_pkg_errors//:errors",
        "@org_uber_go_atomic//:atomic",
    ],
)

go_test(
    name = "chunks_test",
    srcs = [
        "chunks_test.go",
        "head_chunks_test.go",
    ],
    embed = [":chunks"],
    deps = [
        "//tsdb/chunkenc",
        "@com_github_stretchr_testify//require",
    ],
)

alias(
    name = "go_default_library",
    actual = ":chunks",
    visibility = ["//visibility:public"],
)
