load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "httputil",
    srcs = [
        "compression.go",
        "context.go",
        "cors.go",
    ],
    importpath = "github.com/prometheus/prometheus/util/httputil",
    visibility = ["//visibility:public"],
    deps = ["//promql"],
)

go_test(
    name = "httputil_test",
    srcs = [
        "compression_test.go",
        "cors_test.go",
    ],
    embed = [":httputil"],
)

alias(
    name = "go_default_library",
    actual = ":httputil",
    visibility = ["//visibility:public"],
)
