load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "influxdb",
    srcs = ["client.go"],
    importpath = "github.com/prometheus/prometheus/documentation/examples/remote_storage/remote_storage_adapter/influxdb",
    visibility = ["//visibility:public"],
    deps = [
        "//prompb",
        "@com_github_go_kit_log//:log",
        "@com_github_go_kit_log//level",
        "@com_github_influxdata_influxdb//client/v2:client",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_common//model",
    ],
)

go_test(
    name = "influxdb_test",
    srcs = ["client_test.go"],
    embed = [":influxdb"],
    deps = [
        "@com_github_influxdata_influxdb//client/v2:client",
        "@com_github_prometheus_common//model",
    ],
)

alias(
    name = "go_default_library",
    actual = ":influxdb",
    visibility = ["//visibility:public"],
)
